--- a/index-1.html
+++ b/index-1.html
@@ -2,10 +2,9 @@
 <html lang="eg">
     <head>
         <meta charset="utf-8">
-        <tittle>Oussama Portfolio</tittle>
+        <tittle><h1>Oussama Portfolio</h1></tittle>
     </head>
     <body>
-        <h1>Oussama Portfolio</h1>
         <h2>I Am A Web Develloper</h2>
         <hr />
         <a href="./Public/Mov_Rank.html"> <img src="./Files/Images/Movie_Rank.png" alt =" movie link" />  <h3>Movie-Ranking Project</h3> </a>
