--- a/index-1.html
+++ b/index-1.html
@@ -29,7 +29,7 @@
             <li>An appetite (There will be lots of food) </li>
         </ul>
         <hr />
-        <a href="./public/contact.html">Contacte Me </a>          <a href="./public/about.html ">About Me </a>
+        <a href="./Public/Contact.html">Contacte Me </a>          <a href="./Public/About.html ">About Me </a>
         <h1>Thank you for your viste </h1>
     </body>
 
